qa/fhir-server/deployments.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    fluxcd.io/automated: "true"
  name: clin-fhir-server
spec:
  template:
    spec:
      volumes:
        - name: postgres-ca-certificate
          secret:
            secretName: postgres-ca-certificate
            defaultMode: 0555
      imagePullSecrets:
        - name: images-pull
      containers:
        - image: ferlabcrsj/clin-fhir-server:220bafb
          name: clin-fhir-server
          resources:
            requests:
              memory: "2048Mi"
              cpu: "1.00"
            limits:
              memory: "4096Mi"
              cpu: "2.00"
          volumeMounts:
            - name: postgres-ca-certificate
              mountPath: /opt/ca
              readOnly: true
